--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine On
-RewriteBase /ottaviani/
+RewriteBase /marine-therapeute/
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
